--- a/file-emul/index.html
+++ b/file-emul/index.html
@@ -11,6 +11,14 @@
 <body>
   <div class="board noselect">
   </div>
-  <script type="text/javascript" src="main.js"></script>
+  <div class="menu">
+    <button>Король</button>
+    <button>Конь</button>
+    <button>Огонь</button>
+    <button id="getSolve">Найти решение</button>
+    <button>Шаг вперед</button>
+    <button>Шаг назад</button>
+  </div>
+  <script type="text/javascript" src="js/main.js"></script>
 </body>
 </html>
